--- a/assets/css/dev-style.css
+++ b/assets/css/dev-style.css
@@ -1,132 +1,3 @@
-/* Brijesh */
-/* Chat containers */
-.container {
-  border: 2px solid #dedede;
-  background-color: #f1f1f1;
-  border-radius: 5px;
-  padding: 10px;
-  margin: 10px 0;
-}
-
-/* Darker chat container */
-.darker {
-  border-color: #ccc;
-  background-color: #ddd;
-}
-
-/* Clear floats */
-.container::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-/* Style images */
-.container img {
-  float: left;
-  max-width: 60px;
-  width: 100%;
-  margin-right: 20px;
-  border-radius: 50%;
-}
-
-/* Style the right image */
-.container img.right {
-  float: right;
-  margin-left: 20px;
-  margin-right:0;
-}
-
-/* Style time text */
-.time-right {
-  float: right;
-  color: #aaa;
-}
-
-/* Style time text */
-.time-left {
-  float: left;
-  color: #999;
-}
-
-
-
-/* Button used to open the chat form - fixed at the bottom of the page */
-.open-button {
-  background-color: #555;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  opacity: 0.8;
-  position: fixed;
-  bottom: 23px;
-  right: 28px;
-  width: 280px;
-}
-
-/* The popup chat - hidden by default */
-.form-popup {
-  display: none;
-  position: fixed;
-  bottom: 0;
-  right: 15px;
-  border: 3px solid #f1f1f1;
-  z-index: 9;
-}
-
-/* Add styles to the form container */
-.form-container {
-  max-width: 300px;
-  padding: 10px;
-  background-color: white;
-}
-
-/* Full-width textarea */
-.form-container textarea {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  border: none;
-  background: #f1f1f1;
-  resize: none;
-  min-height: 200px;
-}
-
-/* When the textarea gets focus, do something */
-.form-container textarea:focus {
-  background-color: #ddd;
-  outline: none;
-}
-
-/* Set a style for the submit/login button */
-.form-container .btn {
-  background-color: #04AA6D;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  margin-bottom:10px;
-  opacity: 0.8;
-}
-
-/* Add a red background color to the cancel button */
-.form-container .cancel {
-  background-color: red;
-}
-
-/* Add some hover effects to buttons */
-.form-container .btn:hover, .open-button:hover {
-  opacity: 1;
-}
-
-
-
-
-
-
-
 .status-card {
   display: flex;
   align-items: center;
@@ -135,12 +6,14 @@
   border-radius: 8px;
   color: #000;
   font-weight: bold;
+  cursor: pointer; 
+ 
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .status-card .count {
   font-size: 2em;
 }
-.status-card.pending { background-color: #ffcccc; }
+.status-card.pending { background-color: #F6A1A1; }
 .status-card.working { background-color: #b3d1ff; }
 .status-card.completed { background-color: #d3f1e4; }
 
@@ -150,7 +23,7 @@
 }
 
 .status-card.working-active {
-  background-color: #198754; /* Color when working card is clicked */
+  background-color: #007bff; /* Color when working card is clicked */
   color: white;
 }
 
@@ -190,7 +63,7 @@
   bottom: -15px;
   border-style: solid;
   border-width: 0 20px 20px 20px;
-  border-color: transparent transparent #198754 transparent;
+  border-color: transparent transparent #007bff transparent;
   transform: rotate(179deg);transition: 1s;
 }
 
